--- a/catalogo-mare-vercel (1)/package.json
+++ b/catalogo-mare-vercel (1)/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "catalogo-mare-vercel",
-  "private": true,
+  "name": "catalogo-mare",
   "version": "1.0.0",
+  "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "lucide-react": "^0.271.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
     "typescript": "^5.0.0",
-    "vite": "^5.0.0"
+    "vite": "^4.0.0"
   }
 }
